Footer And finishing

--- a/index.html
+++ b/index.html
@@ -64,5 +64,9 @@
           </div>
      </section>
 
+     <footer>
+         <p>Professional Protfolio Website &COPY; Learn With Js</p>
+     </footer>
+
 </body>
 </html>
